ajout de plusieurs pages front end

--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,16 +1,18 @@
-<div fxLayoutAlign="center center">
-  <img src="/assets/logo_p6.png" alt="logo" />
-  
-  <div  
-  fxLayout="row" 
-  fxLayoutAlign="center center" 
-  fxLayoutGap="16px" 
-  fxLayout.xs="column" 
-  fxLayoutGap.xs="12px">
-    
-    <button mat-stroked-button color="primary" routerLink="/connection">Se connecter</button>
-    <button mat-stroked-button color="primary" routerLink="/inscription">S'inscrire</button>
+<div class="divAccueil">
+
+  <!-- Logo -->
+  <img class = "imageAccueil" src="/assets/logo_p6.png" alt="logo" />
+
+  <!-- Boutons -->
+  <div class="divBoutonAccueil">
+
+    <button class="boutonBlanc" routerLink="/connection">
+      Se connecter
+    </button>
+
+    <button class="boutonBlanc" routerLink="/inscription">
+      S'inscrire
+    </button>
 
   </div>
-  
 </div>
