--- a/front/src/app/pages/index/index.component.html
+++ b/front/src/app/pages/index/index.component.html
@@ -2,7 +2,7 @@
     <div class="divFiltre">
 
         <div>
-            <button class="boutonViolet">Créer un article</button>
+            <button class="boutonViolet" routerLink="/creationArticle">Créer un article</button>
         </div>
 
         <div class="divBoutonFiltre">
