pages front end finit version ordi + debut back avec connection bdd

--- a/front/src/app/components/menu/menu.component.scss
+++ b/front/src/app/components/menu/menu.component.scss
@@ -19,3 +19,17 @@
 .imageLogoMenu{
     height: 100px;
 }
+
+a{
+    text-decoration: none;
+}
+
+.lienDeconnection{
+    color: #A40F0F;
+    font-weight: 700;
+}
+
+
+.lienClassique{
+    color: #000000;
+}
