--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -43,6 +43,15 @@ h1{
     border-radius: 8px; /* arrondi léger des coins */
 }
 
+.inputViolet{
+    border: 1px solid #7763C5;
+    background-color: white;
+    display: block;
+    width: 300px;
+    height: 40px;
+    border-radius: 8px; /* arrondi léger des coins */
+}
+
 .boutonViolet{
     background-color: #7550ec;
     color: white;
