--- a/front/src/app/components/menu/menu.component.html
+++ b/front/src/app/components/menu/menu.component.html
@@ -8,19 +8,21 @@
     <nav class="divLienMenuOrdinateur">
 
         <div>
-            <a routerLink="/deconnection">Se deconnecter</a>
+            <a class="lienDeconnection" routerLink="/deconnection">Se deconnecter</a>
         </div>
 
         <div>
-            <a routerLink="/articles">Articles</a>
+            <a class="lienClassique" routerLink="/index">Articles</a>
         </div>
         
         <div>
-            <a routerLink="/themes">Thèmes</a>
+            <a class="lienClassique" routerLink="/themes">Thèmes</a>
         </div>
 
         <div class="divLogoMenuOrdinateur">
-            <img src="assets/logo_p6.png" alt="Profil" class="imageLogoMenu">
+            <a routerLink="/profil">
+                <img src="assets/logo_p6.png" alt="Profil" class="imageLogoMenu">
+            </a>
         </div>
         
     </nav>
