--- a/front/src/app/components/menu/menu.component.html
+++ b/front/src/app/components/menu/menu.component.html
@@ -8,7 +8,7 @@
     <nav class="divLienMenuOrdinateur">
 
         <div>
-            <a class="lienDeconnection" routerLink="/deconnection">Se deconnecter</a>
+            <a class="lienDeconnection" (click)="deconnection()" routerLink="">Se deconnecter</a>
         </div>
 
         <div>
