--- a/front/src/app/pages/article/article.component.scss
+++ b/front/src/app/pages/article/article.component.scss
@@ -34,6 +34,7 @@
     border-radius: 12px;
 }
 
+
 .divForm{
     display: flex;
     flex-direction: row;
@@ -48,4 +49,8 @@ textarea{
     resize: none;
     border-radius: 10px;
     padding: 10px;
+}
+
+.pContenu{
+    white-space: pre-line;
 }
