--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -1,13 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body {
-    
+    font-size: xx-large; 
  }
 
 body { 
     margin-top: 0px;
     margin-left: 0px;
-    margin-right: 0px;  
+    margin-right: 0px; 
     font-family: Roboto, 
     "Helvetica Neue", 
     sans-serif; 
