--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -1,3 +1,11 @@
+.menuOrdinateur{
+   display: none;
+}
+
+.divLienMenuOrdinateur{
+   display: none;
+}
+  
 .divAccueil{
    width: min-content;
    margin: auto;
