--- a/front/src/app/pages/index/index.component.html
+++ b/front/src/app/pages/index/index.component.html
@@ -6,8 +6,8 @@
         </div>
 
         <div class="divBoutonFiltre">
-            <button class="boutonFiltreAncien boutonFiltre" (click)="filtreAncien()">Les plus anciens <mat-icon>arrow_downward</mat-icon> </button>
-            <button class="boutonFiltreRecent boutonFiltre" (click)="filtreRecent()" style="display: none;">Les plus récents <mat-icon>arrow_downward</mat-icon> </button>
+            <button class="boutonFiltreAncien boutonFiltre" (click)="filtreAncien()">Trier par <mat-icon>arrow_downward</mat-icon> </button>
+            <button class="boutonFiltreRecent boutonFiltre" (click)="filtreRecent()" style="display: none;">Trier par<mat-icon>arrow_upward</mat-icon> </button>
         </div>
 
     </div>
