--- a/front/src/app/pages/inscription/inscription.component.html
+++ b/front/src/app/pages/inscription/inscription.component.html
@@ -2,6 +2,11 @@
   <mat-icon>arrow_back</mat-icon>
 </button>
 
+<h1 *ngIf="afficherImgMobile">
+    <img src="assets/logo_p6.png" alt="Profil" class="imageLogoMenu" width="50%">
+</h1>
+
+
 <h1>
     Inscription
 </h1>
