--- a/front/src/app/pages/connection/connection.component.html
+++ b/front/src/app/pages/connection/connection.component.html
@@ -2,8 +2,12 @@
   <mat-icon>arrow_back</mat-icon>
 </button>
 
+<h1 *ngIf="afficherImgMobile">
+    <img src="assets/logo_p6.png" alt="Profil" class="imageLogoMenu" width="50%">
+</h1>
+
 <h1>
-    Se connecter
+    {{titre}}
 </h1>
 
 <div class="divConnection">
