--- a/front/src/app/pages/index/index.component.scss
+++ b/front/src/app/pages/index/index.component.scss
@@ -1,8 +1,8 @@
 .extraitArticle {
     background-color: #F5F5F5;
-    width: 400px;
+    width: 500px;
     margin-top: 20px;
-    margin-bottom: 20px;;
+    margin-bottom: 20px;
     padding: 5px;
 }
 
