--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -65,6 +65,15 @@ h1{
     background-color: #4e359e;
 }
 
+.boutonGris{
+    background-color: #939393;
+    color: white;
+    border: none;
+    padding: 10px;
+    padding-left: 35px;
+    padding-right: 35px;
+}
+
 .erreur{
     color: red;
     font-weight: 400;
